# test-asr

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TCC_AUDIO_CAPTURE_COMMANDS.md  check_tcc_audio_capture.sh  测试
.cargo/: config.toml
examples/: diag_devices.rs  transcribe_wav.rs
src/: app.rs  capture.rs  config.rs  lib.rs  main.rs  media.rs  models.rs  report.rs  segments.rs  util.rs  vad.rs
src/engine/: mod.rs  offline.rs  online.rs
src/system_audio/: macos.rs  macos_coreaudio.rs  mod.rs  watchdog.rs
src/ui/: mod.rs  render.rs  screens.rs
