[package]
name = "asr-compare-tui"
version = "0.1.0"
edition = "2021"
description = "ASR 模型对比 TUI 工具：采集系统音频，实时对比多个 Sherpa 流式模型的识别效果"

[dependencies]
arcvoice-core = { path = "../../game-video/engine/crates/core", features = ["sherpa-onnx-models"] }
# 直接依赖 sherpa-onnx，用于离线模型与 Silero VAD。
# 版本与 engine workspace 对齐。
sherpa-onnx = "1.13.2"
anyhow = "1"
ratatui = "0.28"
crossterm = "0.28"
cpal = "0.15"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hound = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-audio = "0.3"
objc2-core-audio-types = "0.3"
core-foundation = "0.10"
